fixed spacing on scoreboard page

--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,6 @@ article {
   border-radius: 25px;
   grid-template-columns: auto auto;
   padding: 50px;
-  padding-left: 150px;
   margin-right: 100px;
   margin-left: 100px;
   /*grid-template-areas:
